syntax = "proto3";
package proto;

enum Operator {
    EQUAL = 0;
    NOT_EQUAL = 1;
    LESS = 2;
    LESS_EQUAL = 3;
    GREATER = 4;
    GREATER_EQUAL = 5;
    LIKE = 6;
    ADD = 7;
    SUB = 8;
    MUL = 9;
    DIV = 10;
    IN = 11;
    NOT_IN = 12;
}

message TimeRange {
    int64 startTime = 1;
    int64 endTime = 2;
}

message PointList {
    repeated Point points = 1;
}

message Point {
    bytes measurement = 1;
    bytes tags = 2;
    int64 timestamp = 3;
    map<string, bytes> fields = 4;
}

message Tag {
    map<string, string> tags = 1;
}
